# torch-align-med

./: CLAUDE.md  PLAN.md  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  index.html  index.md  plan.md  report.md
docs/assets/css/: style.css
src/torch_align_med/: __init__.py  _grids.py  api.py  base.py  cli.py
src/torch_align_med/encoders/: __init__.py  base.py  biomedclip.py  dinov2.py  planecycle.py  threedino.py
src/torch_align_med/metrics/: __init__.py
src/torch_align_med/metrics/diagnostic/: cds.py  lds.py  rmsc.py
src/torch_align_med/metrics/pairwise/: cka.py  cosine.py  mdms.py
tests/: conftest.py  test_api.py  test_cds.py  test_cka.py  test_cosine.py  test_lds.py  test_mdms.py  test_planecycle.py  test_rmsc.py
